fix: listview table alignment

--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_listview.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_listview.scss
@@ -292,7 +292,6 @@
   height: 100%;
   align-items: center;
   padding: 8px;
-  margin-right: 2rem;
 }
 
 .pipeline-chart,
@@ -313,7 +312,6 @@
   background-color: $white;
   border: 1px solid rgba(0,0,0,.1);
   border-radius: 6px;
-  margin: 0 2rem;
 }
 
 .primary-table-header {
